--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <p>Мой первый сайт</p>
+        <a href="https://github.com/NikolayBereozkin/My-first-project-"> My first project
+        </a>
     </body>
 </html>
